parser: Use getLast and addFirst instead of index math
ArgumentMultimap fetches the last argument value with
values.get(values.size() - 1), and ArgumentTokenizer inserts the
preamble marker with add(0, ...).

The SequencedCollection methods (Java 21) state the intent directly
and remove the index arithmetic; getValue's last-occurrence-wins
behavior becomes visible at a glance.

Let's use getLast() and addFirst() at those two sites.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>